--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ kiwisolver==1.4.4
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
-numpy==1.25.1
+numpy==1.26.4
 packaging==23.1
 pandas==2.0.3
 parso==0.8.3
@@ -32,7 +32,7 @@ Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==306
+pywin32;sys_platform == 'win32'
 pyzmq==25.1.0
 seaborn==0.12.2
 six==1.16.0
