--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,14 @@ tornado==6.3.2
 traitlets==5.9.0
 tzdata==2023.3
 wcwidth==0.2.6
+torch>=2.5.1
+nvidia-cublas-cu12>=12.4.5.8
+nvidia-cuda-cupti-cu12>=12.4.127
+nvidia-cuda-nvrtc-cu12>=12.4.127
+nvidia-cuda-runtime-cu12>=12.4.127
+nvidia-cudnn-cu12>=9.1.0.70
+nvidia-cufft-cu12>=11.2.1.3
+nvidia-curand-cu12>=10.3.5.147
+nvidia-cusolver-cu12>=11.6.1.9
+nvidia-cusparse-cu12>=12.3.1.170
+nvidia-nvjitlink-cu12>=12.4.127
